Finalized the scripting API
Polished scripting APIs and finished the unified API!
It is not compilable yet, but the framework is complete!

--- a/Eureka.cbp
+++ b/Eureka.cbp
@@ -175,6 +175,10 @@
 			<Option target="Release" />
 			<Option target="Debug" />
 		</Unit>
+		<Unit filename="typedefs.h">
+			<Option target="Release" />
+			<Option target="Debug" />
+		</Unit>
 		<Unit filename="ui.cpp" />
 		<Unit filename="ui.h">
 			<Option target="Release" />
