Added the Database API
--The Database API is an abstraction layer so you don't have to pick
what database engine to use between SQLite and MySQL.
--Basically, feed the interface a file and it'll decide what is the
appropriate engine for the file.
--It will also have a constructor that will set the MySQL engine
directly if the user does not have a configuration file at hand.

--- a/Eureka.cbp
+++ b/Eureka.cbp
@@ -103,6 +103,8 @@
 			<Option target="Release" />
 			<Option target="Debug" />
 		</Unit>
+		<Unit filename="database.cpp" />
+		<Unit filename="database.h" />
 		<Unit filename="draw_base.cpp" />
 		<Unit filename="draw_base.h">
 			<Option target="Release" />
