Setting up Game class
--This will be one of, if not the, last class to add to the current
engine. This class will pull everything together, set up threads, and
hold the pointers to the objects. You could say it will be the main
manager class!

--- a/Eureka.cbp
+++ b/Eureka.cbp
@@ -14,6 +14,7 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-O3" />
+					<Add option="-std=c++0x" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
@@ -122,6 +123,8 @@
 			<Option target="Release" />
 			<Option target="Debug" />
 		</Unit>
+		<Unit filename="info.cpp" />
+		<Unit filename="info.h" />
 		<Unit filename="input.cpp" />
 		<Unit filename="input.h">
 			<Option target="Release" />
