Wrapping up the engine
In preparations to complete the engine, I created a set of APIs that
simplify operations for the engine and abstracts the messier inner
workings. If I stay on schedule, I will complete the engine within a
week. I introduced thread safety onto the top most abstraction layers of
the engine. Also, the current API lends itself for integration into the
needed mod editor, which should enable realtime editing of the game
(including realtime crashes as the user loads newly created but buggy
scripts).

--- a/Eureka.cbp
+++ b/Eureka.cbp
@@ -78,6 +78,8 @@
 			<Add directory="Dependencies/mysql-connector-c++-noinstall-1.1.4-win32/lib" />
 			<Add directory="../../../../../MinGW/msys/1.0/local/lib" />
 		</Linker>
+		<Unit filename="BST.cc" />
+		<Unit filename="BST.h" />
 		<Unit filename="Eureka_lua.cxx">
 			<Option target="Release" />
 			<Option target="Debug" />
@@ -155,8 +157,12 @@
 			<Option target="Release" />
 			<Option target="Debug" />
 		</Unit>
+		<Unit filename="modules.cpp" />
+		<Unit filename="modules.h" />
 		<Unit filename="mysql.cpp" />
 		<Unit filename="mysql.h" />
+		<Unit filename="particlesystem.cpp" />
+		<Unit filename="particlesystem.h" />
 		<Unit filename="physics.cpp" />
 		<Unit filename="physics.h">
 			<Option target="Release" />
@@ -212,6 +218,8 @@
 			<Option target="Release" />
 			<Option target="Debug" />
 		</Unit>
+		<Unit filename="threading.cpp" />
+		<Unit filename="threading.h" />
 		<Unit filename="trigger.cpp" />
 		<Unit filename="trigger.h">
 			<Option target="Release" />
