Addition of IOManager and UnitManager
These two classes will allow for safe management of units, files, and
databases. They will prevent duplication of memory where possible.
However, there are ways for the scripts to bypass this memory
conservation mechanism where appropriate. Other classes received minor
changes.

--- a/Eureka.cbp
+++ b/Eureka.cbp
@@ -132,6 +132,8 @@
 			<Option target="Release" />
 			<Option target="Debug" />
 		</Unit>
+		<Unit filename="iomanager.cpp" />
+		<Unit filename="iomanager.h" />
 		<Unit filename="level.cpp" />
 		<Unit filename="level.h">
 			<Option target="Release" />
@@ -239,6 +241,8 @@
 			<Option target="Release" />
 			<Option target="Debug" />
 		</Unit>
+		<Unit filename="unitmanager.cpp" />
+		<Unit filename="unitmanager.h" />
 		<Unit filename="utf8.h" />
 		<Unit filename="utf8/checked.h" />
 		<Unit filename="utf8/core.h" />
