Added UIManager class
Added a very simple, but safe, management class for UIs. Unlike other
managers, this class does not attempt to distinguish between unique
instances of the ui class. As a result, I ask of the scripters to be
very careful when creating UIs so memory bloating does not occur.

--- a/Eureka.cbp
+++ b/Eureka.cbp
@@ -236,6 +236,8 @@
 			<Option target="Release" />
 			<Option target="Debug" />
 		</Unit>
+		<Unit filename="uimanager.cpp" />
+		<Unit filename="uimanager.h" />
 		<Unit filename="unit.cpp" />
 		<Unit filename="unit.h">
 			<Option target="Release" />
