--- a/Eureka.cbp
+++ b/Eureka.cbp
@@ -52,7 +52,7 @@
 				<Option compiler="gcc" />
 			</Target>
 			<Target title="IO">
-				<Option output="/bin/engine/IO" imp_lib="$(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).a" def_file="$(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).def" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/engine/IO" imp_lib="$(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).a" def_file="$(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).def" prefix_auto="1" extension_auto="1" />
 				<Option type="3" />
 				<Option compiler="gcc" />
 				<Option createDefFile="1" />
@@ -67,6 +67,72 @@
 				<Option compiler="gcc" />
 				<Option createDefFile="1" />
 				<Option createStaticLib="1" />
+			</Target>
+			<Target title="Unit">
+				<Option output="bin/engine/Unit" imp_lib="$(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).a" def_file="$(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).def" prefix_auto="1" extension_auto="1" />
+				<Option type="3" />
+				<Option compiler="gcc" />
+				<Option createDefFile="1" />
+				<Option createStaticLib="1" />
+				<Linker>
+					<Add library="IO" />
+					<Add library="threading" />
+				</Linker>
+			</Target>
+			<Target title="Core">
+				<Option output="bin/engine/Core" imp_lib="$(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).a" def_file="$(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).def" prefix_auto="1" extension_auto="1" />
+				<Option type="3" />
+				<Option compiler="gcc" />
+				<Option createDefFile="1" />
+				<Option createStaticLib="1" />
+				<Linker>
+					<Add library="IO" />
+					<Add library="threading" />
+				</Linker>
+			</Target>
+			<Target title="UI">
+				<Option output="bin/engine/UI" imp_lib="$(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).a" def_file="$(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).def" prefix_auto="1" extension_auto="1" />
+				<Option type="3" />
+				<Option compiler="gcc" />
+				<Option createDefFile="1" />
+				<Option createStaticLib="1" />
+				<Linker>
+					<Add library="IO" />
+					<Add library="threading" />
+				</Linker>
+			</Target>
+			<Target title="Plugins">
+				<Option output="bin/engine/plugins" imp_lib="$(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).a" def_file="$(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).def" prefix_auto="1" extension_auto="1" />
+				<Option type="3" />
+				<Option compiler="gcc" />
+				<Option createDefFile="1" />
+				<Option createStaticLib="1" />
+				<Linker>
+					<Add library="IO" />
+					<Add library="threading" />
+				</Linker>
+			</Target>
+			<Target title="Network">
+				<Option output="bin/engine/network" imp_lib="$(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).a" def_file="$(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).def" prefix_auto="1" extension_auto="1" />
+				<Option type="3" />
+				<Option compiler="gcc" />
+				<Option createDefFile="1" />
+				<Option createStaticLib="1" />
+				<Linker>
+					<Add library="IO" />
+					<Add library="threading" />
+				</Linker>
+			</Target>
+			<Target title="Eureka">
+				<Option output="bin/engine/Eureka" imp_lib="$(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).a" def_file="$(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).def" prefix_auto="1" extension_auto="1" />
+				<Option type="3" />
+				<Option compiler="gcc" />
+				<Option createDefFile="1" />
+				<Option createStaticLib="1" />
+				<Linker>
+					<Add library="IO" />
+					<Add library="threading" />
+				</Linker>
 			</Target>
 		</Build>
 		<Compiler>
@@ -136,10 +202,12 @@
 			<Option target="Release" />
 			<Option target="staticlib_all" />
 			<Option target="Debug" />
+			<Option target="Core" />
 		</Unit>
 		<Unit filename="Timer.h">
 			<Option target="Release" />
 			<Option target="Debug" />
+			<Option target="Core" />
 		</Unit>
 		<Unit filename="Unit_tests/c++11_test.cpp">
 			<Option target="c++11_test" />
@@ -151,10 +219,12 @@
 			<Option target="Release" />
 			<Option target="staticlib_all" />
 			<Option target="Debug" />
+			<Option target="UI" />
 		</Unit>
 		<Unit filename="button.h">
 			<Option target="Release" />
 			<Option target="Debug" />
+			<Option target="UI" />
 		</Unit>
 		<Unit filename="config.h">
 			<Option target="Release" />
@@ -201,10 +271,12 @@
 			<Option target="Release" />
 			<Option target="staticlib_all" />
 			<Option target="Debug" />
+			<Option target="Core" />
 		</Unit>
 		<Unit filename="draw_base.h">
 			<Option target="Release" />
 			<Option target="Debug" />
+			<Option target="Core" />
 		</Unit>
 		<Unit filename="eureka.h">
 			<Option target="staticlib_all" />
@@ -216,10 +288,12 @@
 		<Unit filename="game.cpp">
 			<Option target="Release" />
 			<Option target="Debug" />
+			<Option target="Eureka" />
 		</Unit>
 		<Unit filename="game.h">
 			<Option target="Release" />
 			<Option target="Debug" />
+			<Option target="Eureka" />
 		</Unit>
 		<Unit filename="globals.h">
 			<Option target="Release" />
@@ -229,20 +303,24 @@
 			<Option target="Release" />
 			<Option target="staticlib_all" />
 			<Option target="Debug" />
+			<Option target="Core" />
 		</Unit>
 		<Unit filename="info.h">
 			<Option target="Release" />
 			<Option target="staticlib_all" />
 			<Option target="Debug" />
+			<Option target="Core" />
 		</Unit>
 		<Unit filename="input.cpp">
 			<Option target="Release" />
 			<Option target="staticlib_all" />
 			<Option target="Debug" />
+			<Option target="UI" />
 		</Unit>
 		<Unit filename="input.h">
 			<Option target="Release" />
 			<Option target="Debug" />
+			<Option target="UI" />
 		</Unit>
 		<Unit filename="iomanager.cpp">
 			<Option target="Release" />
@@ -260,18 +338,22 @@
 			<Option target="Release" />
 			<Option target="staticlib_all" />
 			<Option target="Debug" />
+			<Option target="Eureka" />
 		</Unit>
 		<Unit filename="level.h">
 			<Option target="Release" />
 			<Option target="Debug" />
+			<Option target="Eureka" />
 		</Unit>
 		<Unit filename="luawrap.cpp">
 			<Option target="Release" />
 			<Option target="Debug" />
+			<Option target="Plugins" />
 		</Unit>
 		<Unit filename="luawrap.h">
 			<Option target="Release" />
 			<Option target="Debug" />
+			<Option target="Plugins" />
 		</Unit>
 		<Unit filename="main.cpp">
 			<Option target="Release" />
@@ -280,20 +362,24 @@
 		<Unit filename="modadapter.cpp">
 			<Option target="Release" />
 			<Option target="Debug" />
+			<Option target="Plugins" />
 		</Unit>
 		<Unit filename="modadapter.h">
 			<Option target="Release" />
 			<Option target="Debug" />
+			<Option target="Plugins" />
 		</Unit>
 		<Unit filename="modules.cpp">
 			<Option target="Release" />
 			<Option target="staticlib_all" />
 			<Option target="Debug" />
+			<Option target="Plugins" />
 		</Unit>
 		<Unit filename="modules.h">
 			<Option target="Release" />
 			<Option target="staticlib_all" />
 			<Option target="Debug" />
+			<Option target="Plugins" />
 		</Unit>
 		<Unit filename="mysql.cpp">
 			<Option target="Release" />
@@ -311,79 +397,97 @@
 			<Option target="Release" />
 			<Option target="staticlib_all" />
 			<Option target="Debug" />
+			<Option target="Network" />
 		</Unit>
 		<Unit filename="networking.h">
 			<Option target="Release" />
 			<Option target="staticlib_all" />
 			<Option target="Debug" />
+			<Option target="Network" />
 		</Unit>
 		<Unit filename="particlesystem.cpp">
 			<Option target="Release" />
 			<Option target="staticlib_all" />
 			<Option target="Debug" />
+			<Option target="Unit" />
 		</Unit>
 		<Unit filename="particlesystem.h">
 			<Option target="Release" />
 			<Option target="staticlib_all" />
 			<Option target="Debug" />
+			<Option target="Unit" />
 		</Unit>
 		<Unit filename="physics.cpp">
 			<Option target="Release" />
 			<Option target="staticlib_all" />
 			<Option target="Debug" />
+			<Option target="Core" />
 		</Unit>
 		<Unit filename="physics.h">
 			<Option target="Release" />
 			<Option target="Debug" />
+			<Option target="Core" />
 		</Unit>
 		<Unit filename="plugin.cpp">
 			<Option target="Release" />
 			<Option target="Debug" />
+			<Option target="Plugins" />
 		</Unit>
 		<Unit filename="plugin.h">
 			<Option target="Release" />
 			<Option target="Debug" />
+			<Option target="Plugins" />
 		</Unit>
 		<Unit filename="progressbar.cpp">
 			<Option target="Release" />
 			<Option target="staticlib_all" />
 			<Option target="Debug" />
+			<Option target="UI" />
 		</Unit>
 		<Unit filename="progressbar.h">
 			<Option target="Release" />
 			<Option target="Debug" />
+			<Option target="UI" />
 		</Unit>
 		<Unit filename="pywrap.cpp">
 			<Option target="Release" />
 			<Option target="staticlib_all" />
 			<Option target="Debug" />
+			<Option target="Plugins" />
 		</Unit>
 		<Unit filename="pywrap.h">
 			<Option target="Release" />
 			<Option target="Debug" />
+			<Option target="Plugins" />
 		</Unit>
 		<Unit filename="rand_generators.cpp">
 			<Option target="Threading" />
+			<Option target="Core" />
 		</Unit>
 		<Unit filename="rand_generators.h">
 			<Option target="Threading" />
+			<Option target="Core" />
 		</Unit>
 		<Unit filename="scriptwrap.cpp">
 			<Option target="Release" />
 			<Option target="Debug" />
+			<Option target="Plugins" />
 		</Unit>
 		<Unit filename="scriptwrap.h">
 			<Option target="Release" />
 			<Option target="Debug" />
+			<Option target="Plugins" />
 		</Unit>
 		<Unit filename="sound_base.cpp">
 			<Option target="Release" />
 			<Option target="staticlib_all" />
 			<Option target="Debug" />
+			<Option target="Core" />
 		</Unit>
 		<Unit filename="sound_base.h">
 			<Option target="Release" />
 			<Option target="Debug" />
+			<Option target="Core" />
 		</Unit>
 		<Unit filename="sqlite_error.cpp">
 			<Option target="Release" />
@@ -435,10 +539,12 @@
 			<Option target="Release" />
 			<Option target="staticlib_all" />
 			<Option target="Debug" />
+			<Option target="UI" />
 		</Unit>
 		<Unit filename="textbox.h">
 			<Option target="Release" />
 			<Option target="Debug" />
+			<Option target="UI" />
 		</Unit>
 		<Unit filename="threading.cpp">
 			<Option target="Release" />
@@ -456,20 +562,24 @@
 			<Option target="Release" />
 			<Option target="staticlib_all" />
 			<Option target="Debug" />
+			<Option target="Core" />
 		</Unit>
 		<Unit filename="trigger.h">
 			<Option target="Release" />
 			<Option target="Debug" />
+			<Option target="Core" />
 		</Unit>
 		<Unit filename="triggermanager.cpp">
 			<Option target="Release" />
 			<Option target="staticlib_all" />
 			<Option target="Debug" />
+			<Option target="Core" />
 		</Unit>
 		<Unit filename="triggermanager.h">
 			<Option target="Release" />
 			<Option target="staticlib_all" />
 			<Option target="Debug" />
+			<Option target="Core" />
 		</Unit>
 		<Unit filename="typedefs.h">
 			<Option target="Release" />
@@ -481,10 +591,12 @@
 			<Option target="Release" />
 			<Option target="staticlib_all" />
 			<Option target="Debug" />
+			<Option target="UI" />
 		</Unit>
 		<Unit filename="ui.h">
 			<Option target="Release" />
 			<Option target="Debug" />
+			<Option target="UI" />
 		</Unit>
 		<Unit filename="uimanager.cpp">
 			<Option target="Release" />
@@ -500,20 +612,24 @@
 			<Option target="Release" />
 			<Option target="staticlib_all" />
 			<Option target="Debug" />
+			<Option target="Unit" />
 		</Unit>
 		<Unit filename="unit.h">
 			<Option target="Release" />
 			<Option target="Debug" />
+			<Option target="Unit" />
 		</Unit>
 		<Unit filename="unitmanager.cpp">
 			<Option target="Release" />
 			<Option target="staticlib_all" />
 			<Option target="Debug" />
+			<Option target="Unit" />
 		</Unit>
 		<Unit filename="unitmanager.h">
 			<Option target="Release" />
 			<Option target="staticlib_all" />
 			<Option target="Debug" />
+			<Option target="Unit" />
 		</Unit>
 		<Unit filename="utf8.h">
 			<Option target="Release" />
